--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/zwundzwzig/programmers_algorithm#readme",
   "devDependencies": {
-    "jest": "^29.3.0"
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1"
   },
   "type": "module"
 }
