--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "outDir": "./build",
-    "rootDir": "src"
+    "rootDir": "programmers/src"
   },
-  "include": ["src/**/*"],
+  "include": ["programmers/src/**/*"],
   "exclude": ["node_modules"]
 }
